--- a/application/app/app.html
+++ b/application/app/app.html
@@ -1,180 +1,181 @@
 <!doctype html>
 <html>
+
 <head>
 
-	<meta charset="utf-8">
-	<title>Prepros App</title>
+  <meta charset="utf-8">
+  <title>Prepros App</title>
 
-	<script>
+  <script>
+  var Prepros = window.Prepros = global.Prepros = {
 
-		var Prepros = window.Prepros = global.Prepros = {
+    gui: require('nw.gui'),
+    Window: require('nw.gui').Window.get(),
+    openWindow: require('nw.gui').Window.open,
 
-			gui: require('nw.gui'),
-			Window: require('nw.gui').Window.get(),
-			openWindow: require('nw.gui').Window.open,
+    VERSION: '4.2.0',
+    IS_PRO: false,
+    PLATFORM_WINDOWS: process.platform === 'win32',
+    PLATFORM_MAC: process.platform === 'darwin',
+    PLATFORM_LINUX: process.platform === 'linux',
+    DEBUG: true,
+    RELEASE_DATE: 'June 15, 2014',
+    MAIN_SERVER_PORT: 5656,
+    WEINRE_SERVER_PORT: 5657,
 
-			VERSION : '4.2.0',
-			IS_PRO: false,
-			PLATFORM_WINDOWS: process.platform === 'win32',
-			PLATFORM_MAC: process.platform === 'darwin',
-			PLATFORM_LINUX: process.platform === 'linux',
-			DEBUG: true,
-			RELEASE_DATE: 'June 15, 2014',
-			MAIN_SERVER_PORT : 5656,
-			WEINRE_SERVER_PORT : 5657,
-			
-			urls : {
-				website: 'https://alphapixels.com/go/prepros-site',
-				docs: 'https://alphapixels.com/go/prepros-docs',
-				help: 'https://alphapixels.com/go/prepros-help',
-				love: 'https://alphapixels.com/go/prepros-love',
-				updateFile: 'https://alphapixels.com/go/update-json',
-				proUpdateFile: 'https://alphapixels.com/go/update-pro-json',
-				github: 'https://alphapixels.com/go/prepros-github',
-				twitter: 'https://alphapixels.com/go/prepros-twitter',
-				emali: 'help@alphapixels.com'
-			}
-		};
-		
-		require('coffee-script').register();
+    urls: {
+    website: 'https://alphapixels.com/go/prepros-site',
+    docs: 'https://alphapixels.com/go/prepros-docs',
+    help: 'https://alphapixels.com/go/prepros-help',
+    love: 'https://alphapixels.com/go/prepros-love',
+    updateFile: 'https://alphapixels.com/go/update-json',
+    proUpdateFile: 'https://alphapixels.com/go/update-pro-json',
+    github: 'https://alphapixels.com/go/prepros-github',
+    twitter: 'https://alphapixels.com/go/prepros-twitter',
+    emali: 'help@alphapixels.com'
+    }
+  };
 
-        if(Prepros.PLATFORM_MAC) {
+  require('coffee-script').register();
 
-
-            //This function is fucked up in OS X
-            Prepros.gui.Shell.openItem = Prepros.gui.Shell.openExternal = function(item) {
-
-                require('child_process').spawn('open', [item], { detached: true });
-
-            };
-
-        }
+  if (Prepros.PLATFORM_MAC) {
 
 
-		//Devtools for developers
-		//Allow anyone to open dev tools for error reporting
-		window.addEventListener('keydown', function (e) {
-			if (e.keyIdentifier === 'F12') {
-				Prepros.Window.showDevTools();
-			}
-		});
+    //This function is fucked up in OS X
+    Prepros.gui.Shell.openItem = Prepros.gui.Shell.openExternal = function(item) {
 
-		//Watch stylesheet for changes only in debug mode
-		(function() {
+    require('child_process').spawn('open', [item], {
+      detached: true
+    });
 
-			if(Prepros.DEBUG) {
+    };
 
-				var fs = require('fs');
-				var path = require('path');
-
-				var cssPath = path.join(process.cwd(), 'app/assets/css/style.css');
-
-				fs.watchFile(cssPath, {interval: 500}, function() {
-
-					document.querySelector('#preprosStylesheet').href="assets/css/style.css?" + Math.random()*1000;
-				})
-			}
-
-		})()
-
-	</script>
-
-	<style type="text/css">
-
-		[ng-cloak] {
-			display: none;
-		}
-
-	</style>
+  }
 
 
-	<!--Load App styles -->
-	<link href="assets/css/style.css" rel="stylesheet" id="preprosStylesheet">
+  //Devtools for developers
+  //Allow anyone to open dev tools for error reporting
+  window.addEventListener('keydown', function(e) {
+    if (e.keyIdentifier === 'F12') {
+    Prepros.Window.showDevTools();
+    }
+  });
 
-	<!-- Load JQuery and Other Third Party Scripts -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/promise/promise-0.1.1.min.js"></script>
-	<script src="vendor/underscore/underscore.min.js"></script>
-	<script src="vendor/bootstrap/bootstrap.min.js"></script>
-	<script src="vendor/angular/angular.js"></script>
-	<script src="vendor/backbone/backbone.min.js"></script>
-	<script src="vendor/backbone-notifier/backbone-notifier.min.js"></script>
-	<script src="vendor/qrcode/qrcode.min.js"></script>
-	<script src="scripts/qrCode.js"></script>
-	<script src="vendor/mousetrap/mousetrap.min.js"></script>
-	<script src="vendor/lab.js/lab.min.js"></script>
+  //Watch stylesheet for changes only in debug mode
+  (function() {
+
+    if (Prepros.DEBUG) {
+
+    var fs = require('fs');
+    var path = require('path');
+
+    var cssPath = path.join(process.cwd(), 'app/assets/css/style.css');
+
+    fs.watchFile(cssPath, {
+      interval: 500
+    }, function() {
+
+      document.querySelector('#preprosStylesheet').href = "assets/css/style.css?" + Math.random() * 1000;
+    })
+    }
+
+  })()
+  </script>
+
+  <style type="text/css">
+  [ng-cloak] {
+    display: none;
+  }
+  </style>
 
 
-	<script src="scripts/init.js"></script>
-	
+  <!--Load App styles -->
+  <link href="assets/css/style.css" rel="stylesheet" id="preprosStylesheet">
+
+  <!-- Load JQuery and Other Third Party Scripts -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/promise/promise-0.1.1.min.js"></script>
+  <script src="vendor/underscore/underscore.min.js"></script>
+  <script src="vendor/bootstrap/bootstrap.min.js"></script>
+  <script src="vendor/angular/angular.js"></script>
+  <script src="vendor/backbone/backbone.min.js"></script>
+  <script src="vendor/backbone-notifier/backbone-notifier.min.js"></script>
+  <script src="vendor/qrcode/qrcode.min.js"></script>
+  <script src="scripts/qrCode.js"></script>
+  <script src="vendor/mousetrap/mousetrap.min.js"></script>
+  <script src="vendor/lab.js/lab.min.js"></script>
+
+
+  <script src="scripts/init.js"></script>
+
 
 </head>
+
 <body ng-controller="MainCtrl" drag-drop-project copy-selected-text ng-cloak>
 
-	<div ng-include src="'partials/titlebar.html'" ng-controller="TitlebarCtrl" class="title-bar"></div>
+  <div ng-include src="'partials/titlebar.html'" ng-controller="TitlebarCtrl" class="title-bar"></div>
 
-	<div class="wrapper" ng-controller="ProjectCtrl">
+  <div class="wrapper" ng-controller="ProjectCtrl">
 
-		<div ng-include src="'partials/sidebar.html'" class="sidebar"></div>
+  <div ng-include src="'partials/sidebar.html'" class="sidebar"></div>
 
-		<!-- Bind keyboard shortcuts after all controllers are defined -->
-		<div ng-controller="FilesCtrl" keyboard-shortcuts class="main" ng-class="{'footer-bar-shown' : routePath == 'FILES' || routePath == 'IMAGE_OPTIMIZATION' || routePath == 'PROJECT_OPTIONS' || routePath == 'LOG'}">
+  <!-- Bind keyboard shortcuts after all controllers are defined -->
+  <div ng-controller="FilesCtrl" keyboard-shortcuts class="main" ng-class="{'footer-bar-shown' : routePath == 'FILES' || routePath == 'IMAGE_OPTIMIZATION' || routePath == 'PROJECT_OPTIONS' || routePath == 'LOG'}">
 
-			<div class="main-canvas" ng-class="{'files-lists-shown' : routePath == 'FILES' || routePath == 'IMAGE_OPTIMIZATION'}">
+    <div class="main-canvas" ng-class="{'files-lists-shown' : routePath == 'FILES' || routePath == 'IMAGE_OPTIMIZATION'}">
 
-                <div class="home-screen" ng-if="routePath == 'HOME'">
+    <div class="home-screen" ng-if="routePath == 'HOME'">
 
-                    <i class="home-screen__icon icon-arrow-down-2"></i>
-                    <h1 class="home-screen__message">Please drag and drop a folder to start a new project.</h1>
+      <i class="home-screen__icon icon-arrow-down-2"></i>
+      <h1 class="home-screen__message">Please drag and drop a folder to start a new project.</h1>
 
-                </div>
+    </div>
 
-				<div  class="app-log" ng-if="routePath == 'LOG'" ng-include src="'partials/log.html'"></div>
+    <div class="app-log" ng-if="routePath == 'LOG'" ng-include src="'partials/log.html'"></div>
 
-				<div ng-if="routePath == 'IMAGE_OPTIMIZATION'"  ng-include src="'partials/images.html'" class="files images" ng-class="{'file-options-shown' : selectedImage.id }"></div>
+    <div ng-if="routePath == 'IMAGE_OPTIMIZATION'" ng-include src="'partials/images.html'" class="files images" ng-class="{'file-options-shown' : selectedImage.id }"></div>
 
-				<div class="files" ng-class="{'file-options-shown' : selectedFile.id }" ng-if="routePath == 'FILES' ">
+    <div class="files" ng-class="{'file-options-shown' : selectedFile.id }" ng-if="routePath == 'FILES' ">
 
-                    <div class="files__no-files" ng-if="selectedProjectFiles.length == 0">
+      <div class="files__no-files" ng-if="selectedProjectFiles.length == 0">
 
-                        <i class="files__no-files__icon icon-sad"></i>
-                        <h1 class="files__no-files__message">There is nothing that Prepros can compile. Hit F5 to refresh.</h1>
+      <i class="files__no-files__icon icon-sad"></i>
+      <h1 class="files__no-files__message">There is nothing that Prepros can compile. Hit F5 to refresh.</h1>
 
-                    </div>
-					
-                    <div ng-include src="'partials/files.html'" class="files-list" ng-if="selectedProjectFiles.length != 0"></div>
+      </div>
 
-					<div class="file-options">
-                        <h3 class="file-options__type">{{selectedFile.type}}</h3>
-                        <div class="file-options__name">{{selectedFile.name}}</div>
-                        <label>
-                            <input type="checkbox" ng-model="selectedFile.config.autoCompile">
-                            <span class="label-desc">Auto Compile</span>
-                        </label>
-                        <div ng-include src="'partials/file-types/' + selectedFile.type +'.html'" ng-if="selectedFile.id"></div>
+      <div ng-include src="'partials/files.html'" class="files-list" ng-if="selectedProjectFiles.length != 0"></div>
 
-                        <button class="btn btn-primary file-options__compile-button" ng-click="compile(selectedFile.pid, selectedFile.id)">Compile</button>
-					</div>
+      <div class="file-options">
+      <h3 class="file-options__type">{{selectedFile.type}}</h3>
+      <div class="file-options__name">{{selectedFile.name}}</div>
+      <label>
+        <input type="checkbox" ng-model="selectedFile.config.autoCompile">
+        <span class="label-desc">Auto Compile</span>
+      </label>
+      <div ng-include src="'partials/file-types/' + selectedFile.type +'.html'" ng-if="selectedFile.id"></div>
 
-				</div>
+      <button class="btn btn-primary file-options__compile-button" ng-click="compile(selectedFile.pid, selectedFile.id)">Compile</button>
+      </div>
 
-
-				<div class="app-options" ng-if="routePath == 'PROJECT_OPTIONS' " ng-include src="'partials/project-options.html'"></div>
-				<div class="app-options" ng-controller="AppOptionsCtrl" ng-if="routePath == 'APP_OPTIONS' " ng-include src="'partials/app-options.html'"></div>
+    </div>
 
 
-			</div>
+    <div class="app-options" ng-if="routePath == 'PROJECT_OPTIONS' " ng-include src="'partials/project-options.html'"></div>
+    <div class="app-options" ng-controller="AppOptionsCtrl" ng-if="routePath == 'APP_OPTIONS' " ng-include src="'partials/app-options.html'"></div>
 
-			<div class="footer-bar"
-                 ng-if="routePath == 'FILES' || routePath == 'IMAGE_OPTIMIZATION' || routePath == 'PROJECT_OPTIONS' || routePath == 'LOG'"
-                 ng-include src="'partials/footer.html'" >
 
-			</div>
-		</div>
-	</div>
+    </div>
 
-	<div class="modal fade multi-device-testing" id="MultiDeviceModal" ng-controller="MultiDeviceCtrl" ng-include src="'partials/multi-device.html'"></div>
-	<div class="modal fade" id="AboutModal" ng-controller="AboutCtrl" ng-include src="'partials/about.html'"></div>
+    <div class="footer-bar" ng-if="routePath == 'FILES' || routePath == 'IMAGE_OPTIMIZATION' || routePath == 'PROJECT_OPTIONS' || routePath == 'LOG'" ng-include src="'partials/footer.html'">
+
+    </div>
+  </div>
+  </div>
+
+  <div class="modal fade multi-device-testing" id="MultiDeviceModal" ng-controller="MultiDeviceCtrl" ng-include src="'partials/multi-device.html'"></div>
+  <div class="modal fade" id="AboutModal" ng-controller="AboutCtrl" ng-include src="'partials/about.html'"></div>
 
 </body>
+
 </html>
